AddiAdding images and pdfs

--- a/about.html
+++ b/about.html
@@ -53,88 +53,59 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-12 philosophy">
-				<div class="phil-title" id="phil-title">
-					<h3>The PKA Philosophy:</h3>
-				</div>
-				<div class="phil-body">
-					<p>The cornerstone of PKA’s business philosophy is quality, in terms of service and engineering design and documentation.  Our commitment to excellence is demonstrated by PKA’s development of structural designs through thorough and careful technical analyses; the establishment of design schedules and management of manpower to achieve them; the production of drawings and specifications through teamwork and coordination with the other disciplines involved; the production of complete, coordinated and properly detailed construction drawings and specifications; close communication with the client and, during construction, the contractor; and the prompt response to questions and requests for information.</p>
-
-					<p>PKA is committed to teamwork on every project.  Our staff works with the owner, architect, civil, mechanical and electrical engineers, and the contractor or construction manager to develop overall project solutions that meet the owner’s needs, goals and desires.</p>
-
-					<p>PKA is particularly attentive to the construction phase of projects.  PKA strives to provide prompt, responsive service in connection with requests for information, questions and field issues to help maintain construction schedules and progress.  One of our goals on every project is for construction to proceed as smoothly as possible.</p>
-
-					<p>The results of our approach can be measured in the timely production of design documents, attainment of accurate construction bids and project budgets, and the smooth execution of construction.  The results are also reflected in the repeat business and referrals that PKA enjoys.  That the majority of our business comes from existing clients and their referrals is a source of great pride to us.</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12 principles">
-				<div class="row princ-title">
-					<h3>Principals:</h3>
+			<div class="col-md-12 about">
+				<div class="row about-title">
+					<h2>About Us:</h2>
 				</div>
 
 				<div class="row princ-body">
 					<div class="col-md-12">
 
+						<ul class="nav nav-tabs row">
+							<li role="presentation" class="active" id="list-phil"><a class="princ-tab" id="tab-phil" data-toggle="tab">PKA Philosophy</a></li>
 
-  <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-    <li><a data-toggle="tab" id="menu1" href="#menu1">Menu 1</a></li>
-    <li><a data-toggle="tab" id="menu2" href="#menu2">Menu 2</a></li>
-    <li><a data-toggle="tab" id="menu3" href="#menu3">Menu 3</a></li>
-  </ul>
+							<li role="presentation" class="" id="list-pickett"><a class="princ-tab" id="tab-pickett" data-toggle="tab">D. Gary Pickett</a></li>
 
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3>HOME</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div  class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div  class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-    </div>
-    <div  class="tab-pane fade">
-      <h3>Menu 3</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-    </div>
-  </div>
+							<li role="presentation" class="" id="list-kelm"><a class="princ-tab" id="tab-kelm" data-toggle="tab" >William F. Kelm</a></li>
 
-
-
-
-
-
-
-
-
-
-
-
-						<!-- <ul class="nav nav-tabs row">
-							<li role="presentation" class="active princ-tab" id="tab-pickett"><a>D. Gary Pickett</a></li>
-							<li role="presentation" class="princ-tab" id="tab-kelm"><a>William F. Kelm</a></li>
-							<li role="presentation" class="princ-tab" id="tab-wu"><a>Larry S. Wu</a></li>
+							<li role="presentation" class="" id="list-wu"><a class="princ-tab" id="tab-wu" data-toggle="tab">Larry S. Wu</a></li>
 						</ul>
 
 						<div class="tab-content row">
-							<div class="col-md-12 princ-pane" id="princ-pickett">
+							<div class="col-md-12 princ-pane tab-pane fade in active" id="princ-phil">
+								<div class="row princ-info-name">
+									<h3>The PKA Philosophy:</h3>
+								</div>
+								<div class="row princ-info princ-info-phil">
+									<p>The cornerstone of PKA’s business philosophy is quality, in terms of service and engineering design and documentation.  Our commitment to excellence is demonstrated by PKA’s development of structural designs through thorough and careful technical analyses; the establishment of design schedules and management of manpower to achieve them; the production of drawings and specifications through teamwork and coordination with the other disciplines involved; the production of complete, coordinated and properly detailed construction drawings and specifications; close communication with the client and, during construction, the contractor; and the prompt response to questions and requests for information.</p>
+
+									<p>PKA is committed to teamwork on every project.  Our staff works with the owner, architect, civil, mechanical and electrical engineers, and the contractor or construction manager to develop overall project solutions that meet the owner’s needs, goals and desires.</p>
+
+									<p>PKA is particularly attentive to the construction phase of projects.  PKA strives to provide prompt, responsive service in connection with requests for information, questions and field issues to help maintain construction schedules and progress.  One of our goals on every project is for construction to proceed as smoothly as possible.</p>
+
+									<p>The results of our approach can be measured in the timely production of design documents, attainment of accurate construction bids and project budgets, and the smooth execution of construction.  The results are also reflected in the repeat business and referrals that PKA enjoys.  That the majority of our business comes from existing clients and their referrals is a source of great pride to us.</p>
+								</div>
+							</div>
+							<div class="col-md-12 princ-pane tab-pane fade" id="princ-pickett">
 								<div class="row princ-info-name">
 									<h3>D. Gary Pickett, P.E.</h3>
 								</div>
-								<div class="row princ-info princ-info-edu">
-									<h4>Education:</h4>
-									<p>B.S., Mechanical Engineering, Texas A&amp;M University</p>
-									<p> M. Eng., Civil Engineering (Structures and Construction), Texas A&amp;M University</p>
-								</div>
-								<div class="row princ-info princ-info-regis">
-									<h4>Professional Registratios:</h4>
-									<p>Licensed Professional Engineer in Texas, Colorado, Indiana, Louisiana, New Mexico, North Carolina, Oklahoma, Missouri</p>
-									<p>Licensed Professional Civil Engineer in California.</p>
+								<div class="row">
+									<div class="col-md-8">
+										<div class="row princ-info princ-info-edu">
+										<h4>Education:</h4>
+										<p>B.S., Mechanical Engineering, Texas A&amp;M University</p>
+										<p> M. Eng., Civil Engineering (Structures and Construction), Texas A&amp;M University</p>
+										</div>
+										<div class="row princ-info princ-info-regis">
+										<h4>Professional Registratios:</h4>
+										<p>Licensed Professional Engineer in Texas, Colorado, Indiana, Louisiana, New Mexico, North Carolina, Oklahoma, Missouri</p>
+										<p>Licensed Professional Civil Engineer in California.</p>
+										</div>
+									</div>
+									<div class="col-md-3">
+										<img src="assets/images/pickettProf.jpg" class="profPic" alt="Pickett Prof">
+									</div>
 								</div>
 								<div class="row princ-info princ-info-memb">
 									<h4>Professional/Technical Memberships:</h4>
@@ -193,7 +164,7 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-12 princ-pane" id="princ-kelm">
+							<div class="col-md-12 princ-pane tab-pane fade" id="princ-kelm">
 								<div class="row princ-info-name">
 									<h3>William F. Kelm, P.E.</h3>
 								</div>
@@ -256,18 +227,25 @@
 									</ul>
 								</div>
 							</div>
-							<div class="col-md-12 princ-pane" id="princ-wu">
+							<div class="col-md-12 princ-pane tab-pane fade" id="princ-wu">
 								<div class="row princ-info-name">
 									<h3>Larry S. Wu, P.E.</h3>
 								</div>
-								<div class="row princ-info princ-info-edu">
-									<h4>Education:</h4>
-									<p>B. S., Architectural Engineering, The University of Texas at Austin</p>
-									<p>M. S., Civil Engineering, The University of Texas at Austin</p>
-								</div>
-								<div class="row princ-info princ-info-regis">
-									<h4>Professional Registratios:</h4>
-									<p>Licensed Professional Engineer in Texas</p>
+								<div class="row">
+									<div class="col-md-8">
+										<div class="row princ-info princ-info-edu">
+											<h4>Education:</h4>
+											<p>B. S., Architectural Engineering, The University of Texas at Austin</p>
+											<p>M. S., Civil Engineering, The University of Texas at Austin</p>
+										</div>
+										<div class="row princ-info princ-info-regis">
+											<h4>Professional Registratios:</h4>
+											<p>Licensed Professional Engineer in Texas</p>
+										</div>
+									</div>
+									<div class="col-md-3">
+										<img src="assets/images/wuProf.jpg" class="profPic" alt="Wu Prof">
+									</div>
 								</div>
 								<div class="row princ-info princ-info-memb">
 									<h4>Professional/Technical Memberships:</h4>
@@ -310,19 +288,9 @@
 									</ul>
 								</div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4">
-				
-			</div>
-			<div class="col-md-8">
-				<p>PKA emphasizes the use of technology for communications, planning, engineering production and general business functions. Applications encompass a library of both general purpose and specialized structural engineering analysis and design programs, including those for finite element analysis, building system analysis and design, and the analysis and design of structural steel, composite concrete and steel, reinforced and post-tensioned concrete, pre-tensioned prestressed concrete and wood structures. Drawing production is based on the use of AutoCAD computer aided design and drafting software. Business applications include Microsoft Office for word processing, spreadsheet and document publishing, and Google Applications.  An integrated project management and bookkeeping system provides timely, accurate tracking of project costs and invoicing.</p>
-
-				<p>PKA currently has 5 licensed structural engineers on staff.</p>
 			</div>
 		</div>
 	</div>
