--- a/home.html
+++ b/home.html
@@ -64,12 +64,12 @@
 
 			</div>
 			<div class="col-md-4">
-				
+				<img src="assets/images/build1.jpg" alt="Building1">
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				
+				<img src="assets/images/build2.jpg" alt="Building2">
 			</div>
 			<div class="col-md-8">
 				<p>PKA emphasizes the use of technology for communications, planning, engineering production and general business functions. Applications encompass a library of both general purpose and specialized structural engineering analysis and design programs, including those for finite element analysis, building system analysis and design, and the analysis and design of structural steel, composite concrete and steel, reinforced and post-tensioned concrete, pre-tensioned prestressed concrete and wood structures. Drawing production is based on the use of AutoCAD computer aided design and drafting software. Business applications include Microsoft Office for word processing, spreadsheet and document publishing, and Google Applications.  An integrated project management and bookkeeping system provides timely, accurate tracking of project costs and invoicing.</p>
