updating the header and footer

--- a/about.html
+++ b/about.html
@@ -28,21 +28,18 @@
 	<div class="header">
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
-		    	<a class="navbar-brand" href="home.html">
-			    	<img src="assets/images/pkaLogo.png" alt="PKA Logo" width="100px" height="50px">
+		      	<a class="navbar-brand" href="home.html">
+			    	<img src="assets/images/pkaLogo.png" alt="PKA Logo" width="160px" height="80px">
 			    </a>
 		    </div>
-
-		    <!-- Collect the nav links, forms, and other content for toggling -->
 		      <ul class="nav navbar-nav navbar-right">
-		      	<li class="nav-tab"><a href="home.html">Home</a></li>
-		        <li class="nav-tab"><a href="projects.html">Projects</a></li>
-		        <li class="nav-tab"><a href="about.html">About Us</a></li>
-		        <li class="nav-tab"><a href="contact.html">Contact Us</a></li>
+		      	<li class="nav-tab"><a class="nav-anc" href="home.html">Home</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="projects.html">Projects</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="about.html">About Us</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="contact.html">Contact Us</a></li>
 		      </ul>
-		  </div><!-- /.container-fluid -->
+		  </div>
 		</nav>
 	</div>
 
@@ -55,7 +52,7 @@
 		<div class="row">
 			<div class="col-md-12 about">
 				<div class="row about-title">
-					<h2>About Us:</h2>
+					<h2>About Us</h2>
 				</div>
 
 				<div class="row princ-body">
@@ -296,40 +293,42 @@
 	</div>
 
 
-	<div class="footer row">
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-6">
-					<img src="assets/images/sfaLogo.jpg" alt="SFA Logo">
-				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<img src="assets/images/ptiLogo.jpg" alt="PTI Logo">
+	<div class="outter-footer">
+		<div class="footer row">
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/sfaLogo.jpg" class="footer-img" alt="SFA Logo">
 					</div>
-					<div class="row">
-						<img src="assets/images/tcaLogo.jpg" alt="TCA Logo">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/tcaLogo.jpg" class="footer-img" alt="TCA Logo">
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-md-4" id="footer-text">
-			<p class="footer-name">Pickett, Kelm &amp; Associates, Inc.</p>
-			<p class="footer-info">4100 Duval Road, Building 4, Suite 103</p>
-			<p class="footer-info">Austin, Texas 78759-4277</p>
-			<p class="footer-info">Tel. (512) 345-5538,  Fax (512) 345-4305</p>
-		</div>
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-6">
-					<img src="assets/images/aciLogo.jpg" alt="ACI Logo">
-				</div>
-				<div class="col-md-6">
-					<img src="assets/images/aiscLogo.jpg" alt="AISC Logo">
+			<div class="col-md-4" id="footer-text">
+				<div class="row footer-center-row">
+					<div class="footer-textbox">
+						<p class="footer-text footer-name">Pickett, Kelm &amp; Associates, Inc.</p>
+						<p class="footer-text footer-info">4100 Duval Road, Building 4, Suite 103</p>
+						<p class="footer-text footer-info">Austin, Texas 78759-4277</p>
+						<p class="footer-text footer-info">Tel. (512) 345-5538,  Fax (512) 345-4305</p>
+					</div>
+					<div class="row">
+						<img src="assets/images/ptiLogo.jpg" class="center-footer-img" alt="PTI Logo">
+					</div>
 				</div>
 			</div>
-			
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/aciLogo.jpg" class="footer-img" alt="ACI Logo">
+					</div>
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/aiscLogo.jpg" class="footer-img" alt="AISC Logo">
+					</div>
+				</div>		
+			</div>
 		</div>
-
 	</div>
 	
 
