--- a/home.html
+++ b/home.html
@@ -28,27 +28,26 @@
 	<div class="header">
 		<nav class="navbar navbar-default">
 		  <div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      	<a class="navbar-brand" href="home.html">
-			    	<img src="assets/images/pkaLogo.png" alt="PKA Logo" width="100px" height="50px">
+			    	<img src="assets/images/pkaLogo.png" alt="PKA Logo" width="160px" height="80px">
 			    </a>
 		    </div>
-
-		    <!-- Collect the nav links, forms, and other content for toggling -->
 		      <ul class="nav navbar-nav navbar-right">
-		      	<li class="nav-tab"><a href="home.html">Home</a></li>
-		        <li class="nav-tab"><a href="projects.html">Projects</a></li>
-		        <li class="nav-tab"><a href="about.html">About Us</a></li>
-		        <li class="nav-tab"><a href="contact.html">Contact Us</a></li>
+		      	<li class="nav-tab"><a class="nav-anc" href="home.html">Home</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="projects.html">Projects</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="about.html">About Us</a></li>
+		        <li class="nav-tab"><a class="nav-anc" href="contact.html">Contact Us</a></li>
 		      </ul>
-		  </div><!-- /.container-fluid -->
+		  </div>
 		</nav>
 	</div>
 
 	<div class="container">
 		<div class="row">
 			<div class="welcome">
+				<h2>Home</h2>
+
 				<p>Welcome to the website of Pickett, Kelm &amp; Associates, Inc., consulting structural engineers.</p>
 				<p>Founded in February, 1993, PKA is in its 21st year providing professional consulting structural engineering services to clients in the public, institutional, industrial and commercial market sectors throughout central Texas.</p>
 			</div>
@@ -64,12 +63,18 @@
 
 			</div>
 			<div class="col-md-4">
-				<img src="assets/images/build1.jpg" alt="Building1">
+				<div class="parent-holder parent-holder1">
+					<div class="img-holder img-holder1" id="img-holder1">
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				<img src="assets/images/build2.jpg" alt="Building2">
+				<div class="parent-holder parent-holder2">
+					<div class="img-holder img-holder2" id="img-holder2">
+					</div>
+				</div>
 			</div>
 			<div class="col-md-8">
 				<p>PKA emphasizes the use of technology for communications, planning, engineering production and general business functions. Applications encompass a library of both general purpose and specialized structural engineering analysis and design programs, including those for finite element analysis, building system analysis and design, and the analysis and design of structural steel, composite concrete and steel, reinforced and post-tensioned concrete, pre-tensioned prestressed concrete and wood structures. Drawing production is based on the use of AutoCAD computer aided design and drafting software. Business applications include Microsoft Office for word processing, spreadsheet and document publishing, and Google Applications.  An integrated project management and bookkeeping system provides timely, accurate tracking of project costs and invoicing.</p>
@@ -79,41 +84,42 @@
 		</div>
 	</div>
 
-
-	<div class="footer row">
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-6">
-					<img src="assets/images/sfaLogo.jpg" alt="SFA Logo">
-				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<img src="assets/images/ptiLogo.jpg" alt="PTI Logo">
+	<div class="outter-footer">
+		<div class="footer row">
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/sfaLogo.jpg" class="footer-img" alt="SFA Logo">
 					</div>
-					<div class="row">
-						<img src="assets/images/tcaLogo.jpg" alt="TCA Logo">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/tcaLogo.jpg" class="footer-img" alt="TCA Logo">
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="col-md-4" id="footer-text">
-			<p class="footer-name">Pickett, Kelm &amp; Associates, Inc.</p>
-			<p class="footer-info">4100 Duval Road, Building 4, Suite 103</p>
-			<p class="footer-info">Austin, Texas 78759-4277</p>
-			<p class="footer-info">Tel. (512) 345-5538,  Fax (512) 345-4305</p>
-		</div>
-		<div class="col-md-4">
-			<div class="row">
-				<div class="col-md-6">
-					<img src="assets/images/aciLogo.jpg" alt="ACI Logo">
-				</div>
-				<div class="col-md-6">
-					<img src="assets/images/aiscLogo.jpg" alt="AISC Logo">
+			<div class="col-md-4" id="footer-text">
+				<div class="row footer-center-row">
+					<div class="footer-textbox">
+						<p class="footer-text footer-name">Pickett, Kelm &amp; Associates, Inc.</p>
+						<p class="footer-text footer-info">4100 Duval Road, Building 4, Suite 103</p>
+						<p class="footer-text footer-info">Austin, Texas 78759-4277</p>
+						<p class="footer-text footer-info">Tel. (512) 345-5538,  Fax (512) 345-4305</p>
+					</div>
+					<div class="row">
+						<img src="assets/images/ptiLogo.jpg" class="center-footer-img" alt="PTI Logo">
+					</div>
 				</div>
 			</div>
-			
+			<div class="col-md-4">
+				<div class="row">
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/aciLogo.jpg" class="footer-img" alt="ACI Logo">
+					</div>
+					<div class="col-md-6 footer-img-holder">
+						<img src="assets/images/aiscLogo.jpg" class="footer-img" alt="AISC Logo">
+					</div>
+				</div>		
+			</div>
 		</div>
-
 	</div>
 	
 
